--- a/demo/DNZ.MvcComponents.Demo/DNZ.MvcComponents.Demo.csproj
+++ b/demo/DNZ.MvcComponents.Demo/DNZ.MvcComponents.Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.Unobtrusive.Ajax" Version="1.0.0" />
+    <PackageReference Include="AspNetCore.Unobtrusive.Ajax" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
