--- a/demo/DNZ.MvcComponents.Demo/DNZ.MvcComponents.Demo.csproj
+++ b/demo/DNZ.MvcComponents.Demo/DNZ.MvcComponents.Demo.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,11 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.Unobtrusive.Ajax" Version="1.0.1" />
+    <PackageReference Include="AspNetCore.Unobtrusive.Ajax" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
